2009-07-17  Lin Ma  <Lin.Ma@Sun.COM>

	* Makefile.am:
	* capplet/main.c (main):
	* configure.in:
	* daemon/Makefile.am:
	* daemon/main.c (main):
	* daemon/nwam-manager.desktop.in:
	* daemon/nwam-manager.schemas.in:
	* data/nwam-manager.desktop.in:
	* data/nwam-manager.schemas.in:
	Use libunique. Add a very simple code to fix doo#9771.
	Remove old singleton code.
	* data/nwam-manager-properties.desktop.in:
	Add a panel menuitem for network locations, doo#9494
	* daemon/status_icon.c (daemon_ncu_up), (daemon_ncu_down):
	Add two comments.
	* capplet/nwam_location_dialog.c (apply):
	Fix doo#10028 nwam-manager-properties -l ok button does not
	close dialog - sparc 
	
2009-07-16  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_model_find_max_name_suffix),
	(capplet_get_increasable_name), (capplet_get_max_name_num),
	(capplet_get_original_name):
	* capplet/capplet-utils.h:
	Fixed duplicated name bug.
	* capplet/nwam_location_dialog.c (nwam_compose_tree_view),
	(refresh), (on_button_clicked):
	Commit immediately after create or dup one, otherwise the second
	dup will fail.
	* capplet/nwam_vpn_pref_dialog.c (refresh):
	Updated due to dup name functions changes.
	* common/nwamui_ncp.c (nwamui_ncp_commit):
	Fixed a nit.
	* common/nwamui_object.c (object_notify_cb):
	Reenable object notify message.

2009-07-14  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c,
	  capplet/nwam_wireless_dialog.c, common/libnwamui.c: 
	  Make the use of a separate WEP HEX and ASCII optional since right
	  now NWAM and dladm doesn't differentiate, so we can't really
	  differentiate in the UI either. Also fix issue where key index
	  wasn't being shown for all WEP types, but it was for WPA, when WPA
	  doesn't support it.
	* common/nwamui_env.c, common/nwamui_env.h:
	  Fix new function to use const char, and also replace an assertion
	  with a warning.  Also on reload, generate some notify messages if
	  the name or enabled has changed.